[package]

name = "libsystemd-sys"
version = "0.2.2"
authors = ["Cody P Schafer <dev@codyps.com>"]
license = "LGPL-2.1+"
description = "FFI bindings to libsystemd"
repository = "https://github.com/jmesmon/rust-systemd"
include = ["Cargo.toml", "**/*.rs", "build.rs" ]
documentation = "https://docs.rs/libsystemd-sys"
edition = "2018"

# 'links' is purposefully omitted
build = "build.rs"

[features]
bus = []

[dependencies]
libc = "0.*"

[build-dependencies]
pkg-config = "0.*"
