[package]
name = "libsystemd-sys"
version = "0.5.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
license = "LGPL-2.1+"
description = "FFI bindings to libsystemd and libelogind"
repository = "https://github.com/jmesmon/rust-systemd"
include = ["Cargo.toml", "**/*.rs", "build.rs" ]
documentation = "https://docs.rs/crates/libsystemd-sys"
edition = "2018"

build = "build.rs"

[features]
default = ["bus"]

bus = []
elogind = []

[dependencies]
libc = "0.2.76"

[build-dependencies]
pkg-config = "0.3.18"
build-env = "0.2.0"
